--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			</div>
 			<div class="container">
 				<ol>
-					<li><a href="Final_Project_Gulyaev.html">target="_blank"Посмотреть отчет в браузере</a></li>
+					<li><a href="Final_Project_Gulyaev.html" target="_blank"> Посмотреть отчет в браузере</a></li>
 					<li><a href="Final_Project_Gulyaev.ipynb" target="_blank">
   						Скачать себе ipynb тетрадку
 					</a></li>
