--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 			<h1 class="title"> Final_Python_Project </h1>
 			<p> by Pavel Gulyaev, HCI </p>
 			<div class="container">
-				<p> Данный проект посвящен исследованию клиентов в зоомагазине моего брата. 
-					Задача исследования была выяснить какие люди покупают товары и кто приглашает новых клиентов (сетевой эффект). 
-					А получилось это или нет… Придется заглянуть внутрь </p>
+				<p> Данный проект посвящен исследованию клиентов в зоомагазине моего брата. </p>
+				<p> Задача исследования была выяснить какие люди покупают товары и кто приглашает новых клиентов (сетевой эффект). </p>
+				<p> А получилось это или нет… Придется заглянуть внутрь... </p>
 			</div>
 			<div class="container">
 				<ol>
