--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<p> by Pavel Gulyaev, HCI </p>
 			<div class="container">
 				<p> Данный проект посвящен исследованию клиентов в зоомагазине моего брата. </p>
-				<p> Задача исследования была выяснить какие люди покупают товары и кто приглашает новых клиентов (сетевой эффект). </p>
+				<p> Моей задачей было выяснить, какие люди покупают товары и кто приглашает новых клиентов (сетевой эффект). </p>
 				<p> А получилось это или нет… Придется заглянуть внутрь... </p>
 			</div>
 			<div class="container">
