--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<div class="container">
 				<ol>
 					<li><a href="Final_Project_Gulyaev.html" target="_blank"> Посмотреть отчет в браузере</a></li>
-					<li><a href="Final_Project_Gulyaev.ipynb" target="_blank">
+					<li><a href="Final_Project_Gulyaev.ipynb" >
   						Скачать себе ipynb тетрадку
 					</a></li>
 					</a></li>
